infra/k8s/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: radwakelany123/auth1
---
apiVersion: v1 
kind: Service
metadata:
  name: auth-srv
spec: 
  selector:
    app: auth
  ports:
     - name: auth
       protocol: TCP
       port: 3000
       targetPort: 3000
