infra/k8s/expiration-redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-deploy
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec: 
      containers:
        - name: expiration-redis
          image: redis

---
apiVersion: v1 
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  selector:
    app: expiration-redis
  ports: 
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
