infra/k8s/nats-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats 
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming
          args:
           [
            '-p',
            '4222',
            '-m',
            '8222',
            '-hbi',
            '5s',
            '-hbt',
            '5s',
            '-hbf',
            '2',
            '-SD',
            '-cid',
            'ticketing'

          ]
---
apiVersion: v1 
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats 
  ports:
    - port: 4222
      name: client
      targetPort: 4222
      protocol: TCP
    - port: 8222
      name: monitoring
      protocol: TCP
      targetPort: 8222
