infra/k8s/payments-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: radwakelany123/payments
---
apiVersion: v1 
kind: Service
metadata:
  name: payments-srv
spec: 
  selector:
    app: payments
  ports:
     - name: payments
       protocol: TCP
       port: 3000
       targetPort: 3000
